# wordcount

./: Cargo.toml  appveyor.yml
src/: main.rs
