[package]
name = "wordcount"
version = "0.1.0"
authors = ["sinhrks <sinhrks@gmail.com>"]

license = "MIT/Apache-2.0"

description = "..."
repository = "https://github.com/mhorikoshi/wordcount"

[badges]
travis-ci = { repository = "mhorikoshi/wordcount", branch = "master" }

[dependencies]
regex = "0.2"
